# cw_log_analysis

./: .gitignore  CMakeLists.txt  README.md  user_sources.txt
src/: LogAnalyzer.cpp  LogAnalyzer.h  LogEntry.h  LogMonitor.cpp  LogMonitor.h  LogParser.cpp  LogParser.h  MainWindow.cpp  MainWindow.h  ReportGenerator.cpp  ReportGenerator.h  main.cpp
